LibSIMD/GMS_sse_matrix.h


// Interoparable with coresponding Fortran derived type.
   
typedef struct __declspec(align(16))  M4x4f32 {
	    float row0[4];
	    float row1[4];
	    float row2[4];
	    float row3[4];
 }M4x4f32;


typedef struct __declspec(align(16))  V1x4f32 {
		float v[4];
 }V1x4f32;


typedef struct __declspec(align(16))  V1x3f32 {
	    float v[4]; // Last element should be set either to 0 or to 1
 }V1x3f32;



 // void functions callable from Fortran.


void M4x4f32_setzero(struct M4x4f32 * __restrict);


void M4x4f32_setzero_stream(struct M4x4f32 * __restrict);


void M4x4f32_set1(struct M4x4f32 * __restrict,
				  const float);


void M4x4f32_set1_stream(struct M4x4f32 * __restrict,
					     const float);


void M4x4f32_set_scalars(struct M4x4f32 * __restrict, 
							  const float, const float,
							  const float, const float,
							  const float, const float,
							  const float, const float,
							  const float, const float,
							  const float, const float,
							  const float, const float,
							  const float, const float );


void M4x4f32_set_scalars_stream(struct M4x4f32 * __restrict,
								const float, const float,
								const float, const float,
								const float, const float,
								const float, const float,
								const float, const float,
								const float, const float,
								const float, const float,
								const float, const float);


void M4x4f32_set_arrays(struct M4x4f32 * __restrict,
						     const float * __restrict,
							 const float * __restrict,
							 const float * __restrict,
							 const float * __restrict);


void M4x4f32_set_arrays_stream(struct M4x4f32 * __restrict,
							   const float * __restrict,
							   const float * __restrict,
							   const float * __restrict,
							   const float * __restrict);


void M4x4f32_set_array(struct M4x4f32 * __restrict,
							const float * __restrict);


void M4x4f32_set_array_stream(struct M4x4f32 * __restrict,
							  const float * __restrict);


void M4x4f32_set_M4x4f32(struct M4x4f32 * __restrict,
							  const struct M4x4f32 * __restrict);


void M4x4f32_set_M4x4f32_stream(struct M4x4f32 * __restrict,
							    const struct M4x4f32 * __restrict);


void M4x4f32_identity_matrix(struct M4x4f32 * __restrict);



void M4x4f32_add_M4x4f32(struct M4x4f32 * __restrict,
				         const struct M4x4f32 *  __restrict,
						 const struct M4x4f32 * __restrict);


void M4x4f32_add_M4x4f32_inplace(struct M4x4f32 * __restrict,
							     const struct M4x4f32 * __restrict);


void M4x4f32_sub_M4x4f32(struct M4x4f32 * __restrict,
						 const struct M4x4f32 * __restrict,
						 const struct M4x4f32 * __restrict);


void M4x4f32_sub_M4x4f32_inplace(struct M4x4f32 * __restrict,
							     const struct M4x4f32 * __restrict);

	
	// Matrix 4x4 - mul - Matrix 4x4
void M4x4f32_mul_M4x4f32(struct M4x4f32 * __restrict , 
						 const struct M4x4f32 * __restrict , 
						 const struct M4x4f32 * __restrict );