Mathematics/GMS_sse_matrix.f90


module mod_sse_matrix

    !===================================================================================85
 !---------------------------- DESCRIPTION ------------------------------------------85
 !
 !
 !
 !          Module  name:
 !                         'mod_sse_matrix'
 !          
 !          Purpose:
 !                    Fortran bindings to small SSE  matrix library.
 !                   
 !                     
 !          History:
 !                        Date: 30-12-2018
 !                        Time: 16:41 GMT+2
 !
 !          Version:
 !
 !                      Major: 1
 !                      Minor: 0
 !                      Micro: 0
 !
 !          Author:  Bernard Gingold
 !                 
 !          
 !         
 !          
 !         
 !          E-mail:
 !                  
 !                      beniekg@gmail.com
 !==================================================================================85

 ! Tab:5 col - Type and etc.. definitions
 ! Tab:10,11 col - Type , function and subroutine code blocks.
    use mod_kinds, only : int4
    use, intrinsic :: ISO_C_BINDING
    implicit none
    public
   
              
    
    !=====================================================59
    !  File and module information:
    !  version,creation and build date, author,description
    !=====================================================59
    integer(kind=int4), parameter, public :: MOD_SSE_MATRIX_MAJOR = 1_int4
    
    ! Minor version
    integer(kind=int4), parameter, public :: MOD_SSE_MATRIX_MINOR = 0_int4
    
    ! Micro version
    integer(kind=int4), parameter, public :: MOD_SSE_MATRIX_MICRO = 0_int4
    
    ! Module full version
    integer(kind=int4), parameter, public :: MOD_SSE_MATRIX_FULLVER = 1000_int4*MOD_SSE_MATRIX_MAJOR + &
                                                                      100_int4*MOD_SSE_MATRIX_MINOR  + &
                                                                      10_int4*MOD_SSE_MATRIX_MICRO
    
    character(*),       parameter, public :: MOD_SSE_MATRIX_CREATE_DATE = "30-12-2018 16:42 +00200 (SUN 30 DEC 2018 GMT+2)"
    
    character(*),       parameter, public :: MOD_SSE_MATRIX_BUILD_DATE = "00-00-0000 00:00"
    
    character(*),       parameter, public :: MOD_SSE_MATRIX_AUTHOR = "Programmer: Bernard Gingold, contact: beniekg@gmail.com"
    
    character(*),       parameter, public :: MOD_SSE_MATRIX_SYNOPSIS = " Fortran bindings to small SSE  matrix library."
    
    ! Interoperable derived types.
    
    type, bind(c), public :: M4x4f32
          real(c_float), dimension(0:3) :: row0
          real(c_float), dimension(0:3) :: row1
          real(c_float), dimension(0:3) :: row2
          real(c_float), dimension(0:3) :: row3
    end type M4x4f32
    
    type, bind(c), public :: V1x4f32
          real(c_float), dimension(0:3) :: v
    end type V1x4f32
    
    type, bind(c), public :: V1x3f32
           real(c_float), dimension(0:3) :: v
    end type V1x3f32
    
    ! Interfaces
    
    interface
        subroutine M4x4f32_setzero(m)  &
                           bind(c,name='M4x4f32_setzero')
                   import :: M4x4f32
                   type(M4x4f32), intent(inout) :: m
        end subroutine M4x4f32_setzero
    end interface
    
    interface
        subroutine M4x4f32_setzero_stream(m) &
                            bind(c,name='M4x4f32_setzero_stream')
                   import :: M4x4f32
                   type(M4x4f32), intent(inout) :: m
        end subroutine M4x4f32_setzero_stream
    end interface
    
    interface
        subroutine M4x4f32_set1(m,s) &
                            bind(c,name='M4x4f32_set1')
              use, intrinsic :: ISO_C_BINDING
              import :: M4x4f32
              type(M4x4f32), intent(inout)     :: m
              real(c_float), intent(in), value :: s
        end subroutine M4x4f32_set1
    end interface
    
    interface
        subroutine M4x4f32_set1_stream(m,s) &
                            bind(c,name='M4x4f32_set1_stream')
                use, intrinsic :: ISO_C_BINDING
                import :: M4x4f32
                type(M4x4f32), intent(inout)     :: m
                real(c_float), intent(in), value :: s
        end subroutine M4x4f32_set1_stream
    end interface
    
    interface
         subroutine M4x4f32_set_scalars(m,             &
                                        s0,s1,s2,s3,   &
                                        s4,s5,s6,s7,   &
                                        s8,s9,s10,s11, &
                                        s12,s13,s14,s15 )   &  
                                bind(c,name='M4x4f32_set_scalars')
                use, intrinsic :: ISO_C_BINDING
                import :: M4x4f32
                type(M4x4f32), intent(inout)     :: m
                real(c_float), intent(in), value :: s0,s1,s2,s3,  &
                                                    s4,s5,s6,s7,   &
                                                    s8,s9,s10,s11, &
                                                    s12,s13,s14,s15
         end subroutine M4x4f32_set_scalars
    end interface
    
    interface
         subroutine M4x4f32_set_scalars_stream(m,       &
                                               s0,s1,s2,s3,   &
                                               s4,s5,s6,s7,   &
                                               s8,s9,s10,s11, &
                                               s12,s13,s14,s15 )   &
                                 bind(c,name='M4x4f32_set_scalars_stream')
                use, intrinsic :: ISO_C_BINDING
                import :: M4x4f32
                type(M4x4f32), intent(inout)     :: m
                real(c_float), intent(in), value :: s0,s1,s2,s3,  &
                                                    s4,s5,s6,s7,   &
                                                    s8,s9,s10,s11, &
                                                    s12,s13,s14,s15
         end subroutine M4x4f32_set_scalars_stream
    end interface
    
    interface
         subroutine M4x4f32_set_arrays(m,r0,r1,r2,r3) &
                                 bind(c,name='M4x4f32_set_arrays')
                 use, intrinsic :: ISO_C_BINDING
                import :: M4x4f32
                type(M4x4f32), intent(inout)              :: m
                real(c_float), dimension(0:3), intent(in) :: r0
                real(c_float), dimension(0:3), intent(in) :: r1
                real(c_float), dimension(0:3), intent(in) :: r2
                real(c_float), dimension(0:3), intent(in) :: r3
         end subroutine M4x4f32_set_arrays
    end interface
    
    interface
        subroutine M4x4f32_set_arrays_stream(m,r0,r1,r2,r3) &
                                 bind(c,name='M4x4f32_set_arrays_stream')
                use, intrinsic :: ISO_C_BINDING
                import :: M4x4f32
                type(M4x4f32), intent(inout)              :: m
                real(c_float), dimension(0:3), intent(in) :: r0
                real(c_float), dimension(0:3), intent(in) :: r1
                real(c_float), dimension(0:3), intent(in) :: r2
                real(c_float), dimension(0:3), intent(in) :: r3
        end subroutine M4x4f32_set_arrays_stream
    end interface
    
    interface
        subroutine M4x4f32_set_array(m,r)  &
                                bind(c,name='M4x4f32_set_array')
                use, intrinsic :: ISO_C_BINDING
                import :: M4x4f32
                type(M4x4f32),                  intent(inout)  :: m
                real(c_float), dimension(0:15), intent(in)     :: r
        end subroutine M4x4f32_set_array
    end interface
    
    interface
         subroutine M4x4f32_set_array_stream(m,r)  &
                                 bind(c,name='M4x4f32_set_array_stream')
                use, intrinsic :: ISO_C_BINDING
                import :: M4x4f32
                type(M4x4f32),                  intent(inout)  :: m
                real(c_float), dimension(0:15), intent(in)     :: r
         end subroutine M4x4f32_set_array_stream
    end interface
    
    interface
        subroutine M4x4f32_set_M4x4f32(m0,m1)  &
                                  bind(c,name='M4x4f32_set_M4x4f32')
                use, intrinsic :: ISO_C_BINDING
                import :: M4x4f32
                type(M4x4f32), intent(inout) :: m0
                type(M4x4f32), intent(in)    :: m1
        end subroutine M4x4f32_set_M4x4f32
    end interface
    
    interface
        subroutine M4x4f32_set_M4x4f32_stream(m0,m1) &
                                  bind(c,name='M4x4f32_set_M4x4f32_stream')
                use, intrinsic :: ISO_C_BINDING
                import :: M4x4f32
                type(M4x4f32), intent(inout) :: m0
                type(M4x4f32), intent(in)    :: m1
        end subroutine M4x4f32_set_M4x4f32_stream
    end interface
    
    interface
         subroutine M4x4f32_identity_matrix(m) &
                                  bind(c,name='M4x4f32_identity_matrix')
                use, intrinsic :: ISO_C_BINDING
                import :: M4x4f32
                type(M4x4f32),  intent(inout) :: m
         end subroutine M4x4f32_identity_matrix
    end interface
    
    interface
         subroutine M4x4f32_add_M4x4f32(mc,mb,ma) &
                                  bind(c,name='M4x4f32_add_M4x4f32')
                use, intrinsic :: ISO_C_BINDING
                import :: M4x4f32
                type(M4x4f32), intent(inout) :: mc
                type(M4x4f32), intent(in)    :: mb
                type(M4x4f32), intent(in)    :: ma
         end subroutine M4x4f32_add_M4x4f32
    end interface
    
    interface
         subroutine M4x4f32_add_M4x4f32_inplace(mb,ma) &
                                   bind(c,name='M4x4f32_add_M4x4f32_inplace')
                use, intrinsic :: ISO_C_BINDING
                import :: M4x4f32
                type(M4x4f32), intent(inout) :: mb
                type(M4x4f32), intent(in)    :: ma
         end subroutine M4x4f32_add_M4x4f32_inplace
    end interface
    
    interface
         subroutine M4x4f32_sub_M4x4f32(mc,mb,ma) &
                                    bind(c,name='M4x4f32_sub_M4x4f32')
                use, intrinsic :: ISO_C_BINDING
                import :: M4x4f32
                type(M4x4f32), intent(inout) :: mc
                type(M4x4f32), intent(in)    :: mb
                type(M4x4f32), intent(in)    :: ma
         end subroutine M4x4f32_sub_M4x4f32
    end interface
    
    interface
         subroutine M4x4f32_sub_M4x4f32_inplace(mb,ma) &
                                    bind(c,name='M4x4f32_sub_M4x4f32_inplace')
                use, intrinsic :: ISO_C_BINDING
                import :: M4x4f32
                type(M4x4f32), intent(inout) :: mb
                type(M4x4f32), intent(in)    :: ma
         end subroutine M4x4f32_sub_M4x4f32_inplace
    end interface
    
    interface
         subroutine M4x4f32_mul_M4x4f32(mc,mb,ma) &
                                    bind(c,name='M4x4f32_mul_M4x4f32')
                use, intrinsic :: ISO_C_BINDING
                import :: M4x4f32
                type(M4x4f32), intent(inout) :: mc
                type(M4x4f32), intent(in)    :: mb
                type(M4x4f32), intent(in)    :: ma
         end subroutine M4x4f32_mul_M4x4f32
    end interface
